create github pages

--- a/about.html
+++ b/about.html
@@ -24,6 +24,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-72899582-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-72899582-1');
+</script>
+
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-rix9sALp7d" once="menu" id="menu2-76">
 
     
@@ -165,7 +180,7 @@
             <div class="carousel-item">
                     <div class="user col-md-8">
                         <div class="user_image">
-                            <img src="assets/images/-dsc0138-2-400x267.png" alt="" title="">
+                            <img src="assets/images/dsc0138-2-400x267.png" alt="" title="">
                         </div>
                         <div class="user_text pb-3">
                             <p class="mbr-fonts-style display-7"><strong>Cyndi Barrett<br></strong>Owner<br><br>Hi, my name is Cyndi. My husband, Clint, started Barrett Insurance in 2001. At that time, I supported Clint’s business by working as his accountant. I also worked full time as a human resource/benefits manager for another company. I received my insurance license in 2009. In 2011, I started to work full time for Barrett Insurance. 
@@ -180,7 +195,7 @@
                 </div><div class="carousel-item">
                     <div class="user col-md-8">
                         <div class="user_image">
-                            <img src="assets/images/-dsc018311-2-400x267.png" alt="" title="">
+                            <img src="assets/images/dsc018311-2-400x267.png" alt="" title="">
                         </div>
                         <div class="user_text pb-3">
                             <p class="mbr-fonts-style display-7"><strong>Joe Ruden<br></strong>Licensed Agent  Specializing in Life &amp; Health Insurance<br><br>I approach the world with a giving attitude that has served me well since entering the insurance world in 1997. I continue to add to my 20 years of experience by developing quality health, life, and disability programs for companies and individuals. I also expand out to cover business exposures. 
@@ -197,7 +212,7 @@
                 </div><div class="carousel-item">
                     <div class="user col-md-8">
                         <div class="user_image">
-                            <img src="assets/images/-dsc01251-1-400x267.png" alt="" title="">
+                            <img src="assets/images/dsc01251-1-400x267.png" alt="" title="">
                         </div>
                         <div class="user_text pb-3">
                             <p class="mbr-fonts-style display-7"><strong>Tracey Moore</strong><br>Licensed Agent  Specializing in Home, Auto &amp; Commercial Insurance<strong><br></strong><br>Hi, I’m Tracey. I was born in Garden City, Michigan, but was raised in Biloxi, Mississippi. The lesson in “southern hospitality” has shaped who I am and everything that I stand for. We were taught to respect our elders, to put your best foot forward, and to be kind and caring to the people who influence your life. 
@@ -218,7 +233,7 @@
                 </div><div class="carousel-item">
                     <div class="user col-md-8">
                         <div class="user_image">
-                            <img src="assets/images/-dsc0188-1-400x267.png" alt="" title="">
+                            <img src="assets/images/dsc0188-1-400x267.png" alt="" title="">
                         </div>
                         <div class="user_text pb-3">
                             <p class="mbr-fonts-style display-7"><strong>Ben Judsen</strong><br>Licensed Agent  Specializing in Life &amp; Health Insurance<strong><br></strong><br>Before I decided to work in the insurance field, I was a store director for Wal-Mart, Meijer, and a few other retailers. I felt the need to move into a career that would allow me to do some real good. I earned my first insurance license in 2010. I specialize in health, life, and disability insurance. In 2016, I joined the Hillsdale Rotary Club, which makes a difference in our community. 
@@ -233,7 +248,7 @@
                 </div><div class="carousel-item">
                     <div class="user col-md-8">
                         <div class="user_image">
-                            <img src="assets/images/-dsc015611-1-400x267.png" alt="" title="">
+                            <img src="assets/images/dsc015611-1-400x267.png" alt="" title="">
                         </div>
                         <div class="user_text pb-3">
                             <p class="mbr-fonts-style display-7"><strong>
@@ -249,7 +264,7 @@
                 </div><div class="carousel-item">
                     <div class="user col-md-8">
                         <div class="user_image">
-                            <img src="assets/images/-dsc0118-2-400x267.png" alt="" title="">
+                            <img src="assets/images/dsc0118-2-400x267.png" alt="" title="">
                         </div>
                         <div class="user_text pb-3">
                             <p class="mbr-fonts-style display-7"><strong>
@@ -263,7 +278,7 @@
                 </div><div class="carousel-item">
                     <div class="user col-md-8">
                         <div class="user_image">
-                            <img src="assets/images/-dsc01601-400x267.png" alt="" title="">
+                            <img src="assets/images/dsc01601-400x267.png" alt="" title="">
                         </div>
                         <div class="user_text pb-3">
                             <p class="mbr-fonts-style display-7"><strong>
@@ -297,7 +312,7 @@
                 </div><div class="carousel-item">
                     <div class="user col-md-8">
                         <div class="user_image">
-                            <img src="assets/images/-dsc0241-3-400x266.png" alt="" title="">
+                            <img src="assets/images/dsc0241-3-400x266.png" alt="" title="">
                         </div>
                         <div class="user_text pb-3">
                             <p class="mbr-fonts-style display-7"><strong>Douglas Jones
