--- a/reviews.html
+++ b/reviews.html
@@ -22,6 +22,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-72899582-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-72899582-1');
+</script>
+
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-rix9CxJ7xv" once="menu" id="menu2-7a">
 
     
@@ -65,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="mbr-section content5 cid-r6QfMYdPT0" id="content5-4g">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section content5 cid-r6QfMYdPT0" id="content5-4g">
 
     
 
