create github pages

--- a/ben.html
+++ b/ben.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
+<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3yhbXrlUQrPyQeQ+Vg2Bvyqm2MN1slyadGryjfOsI8MEbXc1kaybuiMXbKNSxg80dOynyXkU+BqhViwfpzrBOPWg4kE7uU8PHT/df+4JoWF8WRV2DlGlGmXSQw0wN+D8">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WGHYEEwBSEAZ2/yqcwW+NFv/5617l5+PvKNYVgbRA+mXF4qVhFRX/pF5SU5FlK17S61hdhcAmnXUI+w9q4jOD/xK8fTrQAQA0SH8/AVNy7zlfpopR2K/cCwLPxIp01ED">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
