--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="mbr-section content5 cid-rjLHi5lPOL" id="content5-7w">
+<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-section content5 cid-rjLHi5lPOL" id="content5-7w">
 
     
 
@@ -240,7 +240,7 @@
                     <div class="card-box p-5">
                         <h4 class="card-title py-2 mbr-fonts-style align-center mbr-white display-5"><strong>
                             Insurance</strong></h4>
-                        <p class="mbr-text mbr-fonts-style mbr-white display-7">Barrett Insurance comprehensively protects your dreams. We offer various lines of coverage including life, health, commercial, farm, auto &amp; homeowners insurance.<br><br></p>
+                        <p class="mbr-text mbr-fonts-style mbr-white display-7">Barrett Insurance comprehensively protects your dreams. We offer various lines of coverage including life, health, commercial, farm, auto &amp; homeowners insurance.<br></p>
                     </div>
                 </div>
             </div>
@@ -322,7 +322,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thank you for subscribing to our newsletter!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Bd+bwXm0WIAZZgAEC8HxFaRMn4RPZQWn080cIsdtYEuwsgytAIZqwfFtLs3OUQC0RucWvGHpwcairbiG8zYA0X6H4CCfIuhCoHNGdxC+eocscQ1SCOt0L0fjtF5a8gD3">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yZ30xqRsTR+5r81N4NlUss2Ca1WydKuECcL8+ZIZ/q+BHPrQQJwaxRBDsTl42hNoWPR/TGQqzaWLPhbRg4+H6Wdajr8vdDn2zX8jBk5RP9F7gPwRKUQ+lavwWgZy3PFu">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-6y">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Subscribe</button></span>
@@ -399,7 +399,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form! One of our insurance experts will contact you soon!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="bOJh2m3XtjC9UZWjm4JgFJ44oww6VOcKVDlRneC6o+vgb7Jp94+HKNq0u2PPECvsnSzJ/N5U/3Cr+0BGJjrDTEvtepuPGbdpdo7vkA7zxe9EIie9qc1te3BgmTX51bP9">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wUZN9UcaCy+d6voWMIY9yIDCz4tNyBYVVOyDdfQOXRr3OMvIUz5Qq3p+KC6Dz3Qm/+F5b/M+K6aiZhww+NiyVdJe3yhTjjQVBHQ0Y2V2YiN3niQnfKjvL/ixZH6L56rw">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
