--- a/products.html
+++ b/products.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make a website for free</a></section><section class="mbr-section content5 cid-r6QfwbDyCS" id="content5-49">
+<section class="engine"><a href="https://mobirise.info/g">how to build a site</a></section><section class="mbr-section content5 cid-r6QfwbDyCS" id="content5-49">
 
     
 
@@ -181,7 +181,7 @@
             <div class="card col-12 col-md-6 align-center col-lg-4">
                 <div class="card-wrap">
                     <div class="card-img">
-                        <img src="assets/images/mbr-1-1036x691.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/mbr-936x624.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box p-5">
                         <h4 class="card-title py-2 mbr-fonts-style align-center mbr-white display-5"><strong>Homeowners &amp; Renters Insurance</strong></h4>
