--- a/becky.html
+++ b/becky.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own website for free</a></section><section class="mbr-section content5 cid-r6Qg4II7iO" id="content5-4p">
+<section class="engine"><a href="https://mobirise.info/e">how to make a website</a></section><section class="mbr-section content5 cid-r6Qg4II7iO" id="content5-4p">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="v17FkII9IM9JWPaI0aL7Ld6Jvx0yEsvW3nVsr0+RrnJUMtg+6vV8VdOMEYTdnmsT0XLSdJj6oomhF0HBQg29SKgdvJXm4m3DPsz1j+C0K+G7jELXwmHmCbtgVEyuNTrV">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uuT0GiTYwFv07FC7HtG/9OUU9zi9zvKqAXkd8UomXDEUt3AtkmfHuZiUKnOWlTgkOiKvuIlWzs4cviF4NOZnpBXEp8Pf2CCxTCl5DfqnceLThHCfV5hZ2sgpnW4S8hB1">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
