--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="HFzUV7NbrziFxzvF9ggi7AOcN/COPL8qswBMOdXO1Aopy5jvBTGbtdhkkTUqeRXex9vRLcqfsxUXcZVhSqblZZr9NiL/evGb2FidDGFLeCql/ACY7dDIueDcK0pTXybs">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KKqYKBtr8c/pNRnxzDuH4iYQ+X5+LEcPwZcPT79U3B8I0JqhUWHkK1G/9BleRb/gUWYNzUB9AlqTZgzLv/ol5NJiYcGWOF2TgkAakalByJilStl/wyr8Q+W/wHqzLTEX">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
