--- a/frank.html
+++ b/frank.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -79,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a site for free</a></section><section class="mbr-section content5 cid-r6QgitsG48" id="content5-4y">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="mbr-section content5 cid-r6QgitsG48" id="content5-4y">
 
     
 
@@ -156,7 +157,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jdIxXwxgylDXwHZy7cN6aMFgYnSfmCIf1jL4vJZ1+OZb2xm5fjJJWTROXn/9F1MS6h0/hiPMHq0ZYZ9Yj5oefpeWVcmvceBlGexfO7XWDHUBHfDYsTgPC3MrT6uVXfbi">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2eZhQrzXn8ng489NshJ2sG08RPxNOWye60yGv4hdm1+FDqTMC9RqTkYAHWCJAK5AmjIvOQQqdaEh2dsqAebf9x/mqZghNx/zx1iHlL2T3T3izntytogFCy4AOxliKjCy">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
