--- a/cyndi.html
+++ b/cyndi.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -157,7 +157,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QQ/fseLK+ktOEPa11xRK23NEo4/98mdzaMO7/vWlDK5J3h/Joht2oaFoDRHV+3WHyuLM6j2KOTNsyO1Ior1jB/aTgX0uIJ24gdkIUp5W9tcQ2BFQJ3Lhp7zjpPJvMyFl">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="v5Ny5h8zYzSLYkYYdHj4+2G4DWOcRQKkvlMT3Oni3yY3ztOMT/9h0OjrrIOid0j/PR0c8sFhUF9lg5MKrPXtzFhYq9cMVBXJ1z5lLAyJn25zeo2yX4kOhQCNuCiVKZ9M">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
