create github pages

--- a/aaron.html
+++ b/aaron.html
@@ -10,12 +10,11 @@
   <meta name="description" content="Barrett Insurance comprehensively protects your dreams. We offer various lines of coverage including life, health, commercial, farm, auto & homeowners insurance. ">
   <title>Barrett Insurance | Contact Aaron</title>
   <link rel="stylesheet" href="assets/tether/tether.min.css">
-  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -81,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a website for free</a></section><section class="mbr-section content5 cid-r6Qg8n0nlW" id="content5-4r">
+<section class="engine"><a href="https://mobirise.info/b">create a site</a></section><section class="mbr-section content5 cid-r6Qg8n0nlW" id="content5-4r">
 
     
 
@@ -158,7 +157,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="YYbYQJk/yFPkudB7FZzN84E7aQa/JDMsWgFwQOUZP449fbpi3BYaOYo2+8hO50xv96APjMPFvwDwPvlWUyvw9oMECnagardRnUnCJAQEWUvRTXvJ68gTmzNY8jDBqUFK">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ymZ+PbTaq0F35KipuoH3SIFKUt4qGeb9S84MQYvhl4oOtP3JqN4fSRd7RQv00DoZMrO0mOZu6HlAt6YqXO9TrJws2q42O7RiqJavapLjThq71pe416WBvvoFQiTN4wA7">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -216,12 +215,10 @@
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
   </body>
 </html>
