--- a/ben.html
+++ b/ben.html
@@ -10,12 +10,11 @@
   <meta name="description" content="Barrett Insurance comprehensively protects your dreams. We offer various lines of coverage including life, health, commercial, farm, auto & homeowners insurance. ">
   <title>Barrett Insurance | Contact Ben</title>
   <link rel="stylesheet" href="assets/tether/tether.min.css">
-  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -81,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
 
     
 
@@ -158,7 +157,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mA92pk16E/2l/RbajGLVBKmYuCgeuBTbf11SMIfNZJjcjvSZAeExXkB31ILlCA2snCdEOT+yToLFMeLCy4Ft3G+ZgXnO/CtuwQXcyP+jPIPKg16A0LDXnBEsgj7TpKsT">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="U10Oce8BZuauRuqJX/QAcEviRlHJNQFQEtWzE6JUelR2yAJ70hONYQ2mgGJmscNulNAz+VKCMjuKvhbh87EobJhL+lMc3kB53XDlzUe5Rti6XhdZqwqTatCyidUFxjqf">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -216,12 +215,10 @@
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
   </body>
 </html>
