--- a/cyndi.html
+++ b/cyndi.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">site maker</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -157,7 +157,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="w1P98gU5SA6rAi5NuRututOXQi3PLJyzYVWEQm/w6J/Oy7I0yD+jpOk2H5gzZJ/X2E9VvoAA/mF2rtlBT33ZQtBobTgGo5KSJ8S5aRKHH3BTF1sRb1X6C6rzeIR8sbsM">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5gHUIaKzNbjNGjONixYd3oLBVusaJyBhCqcpbmZg9cqXiIoh8oiCiCDDcowVom3sWSmR6mZZgwCmqMDRf9R3DLRMAKno4T3TUlWiq0U9lPwfiqX4IkGSLTNI/+1dN2hi">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
