--- a/cyndi.html
+++ b/cyndi.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/d">website maker</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -157,7 +157,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="NQCx1fKYBT2VeAn6hVcrqPn9SCJgKwUCf7LfAobuEdNiQVuaQI3IzURVAxcWir0BpAUD33PxiEOH0c0I0Swqd7PVffj9ckaud4nIe5XltKWAqVV4urZe5ng+mgGrA35v">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yMBV9hJbN/nCWpcfhBK0v0DGWxIrblig0eG5lQQTKdx/gYa20V5esHc9ffOIjebayjW0XisYinAQAxV6/VV+pP1xuyOWMHmGGVVxielj8XxudFLxeY+i0Tbgn8cC6T4u">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
