--- a/doug.html
+++ b/doug.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -157,7 +157,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MlWgBO6yb309N+52IGPhAZj+89r8sD5McpiP5OUEntEQ0RiGVwg6bLzRELWH9CVs2vSHenlGw6miYbgcDwB2QwmCLYlaV2lwrae114ldkcn1O8EGiVKZlUyzd9ETaIOL">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QF7krURJ+V8yYsREBAvl0IojyQ55nnycH2MHVTTSPBnx/r4FvE5sFimpl4zqGp6t8FU8FTGdH2AExkj0aQ2AzEHKxYg+rUdFRPui5a8l0r6XdO/l9V2LOVtvijkPknlI">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
