--- a/media.html
+++ b/media.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-section content5 cid-r6QfBGX7tp" id="content5-4b">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section content5 cid-r6QfBGX7tp" id="content5-4b">
 
     
 
@@ -351,7 +351,7 @@
     </div>
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud1-8e" data-rv-view="448" style="background-color: rgb(255, 255, 255); padding-top: 3rem; padding-bottom: 3rem;">
+<section class="mbr-gallery mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud1-8e" data-rv-view="356" style="background-color: rgb(255, 255, 255); padding-top: 3rem; padding-bottom: 3rem;">
     <!-- Gallery -->
     <div class="mbr-section__container mbr-gallery-layout-article addons-container addons-row">
             <div class=" addons-container-inner">
