--- a/cyndi.html
+++ b/cyndi.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple website builder</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/k">how to develop your own website</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -157,7 +157,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2MAe3+E8VLNPJF5d5dq753Xit1CpmAfid6c1U0iniXjyVKFyyJArg7Pr0oZrwGw6VWc+jTFYigTjlVoSWCzVOYAQu/nXlxTW7Jf4Rvjaijoiao6qc5wjS57M3xjT2J4l">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KXIzmRUnWuv5VGw+85gUEuaE9NX2uctywEYlBvhDCDqddaMbisJDbje2TWoet67E6Jd0Q1KEajvbhXmbO5xU2a4pSqEmQvmHgCVm8seQmYM8l1aZV/NOk7NsFJx89kT+">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
